resolve svg scaling issue on mobile (#12)
* resolve svg scaling issue on mobile

* fix clock overflow on mobile

These clocks are now stacked 1x per row on mobile.

* fix linting

--- a/assets/styles/layouts/_global.scss
+++ b/assets/styles/layouts/_global.scss
@@ -2,7 +2,6 @@
 
 html {
     box-sizing: border-box;
-
 }
 
 *,
@@ -51,14 +50,27 @@ html {
 }
 
 .clocks {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    @media only screen and (min-width: 414px) {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
 
 .clock {
-    @include column-fixed(1 / 4);
+    @media only screen and (min-width: 414px) {
+        @include column-fixed(1 / 4);
+    }
+
     margin: 0;
+
+    svg {
+        max-width: 100%;
+
+        @media only screen and (max-width: 414px) {
+            width: 100%;
+        }
+    }
 }
 
 /* - - - Index - - - */
@@ -268,7 +280,7 @@ html {
 
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
 
     .form--left,
     .form--right {
@@ -325,7 +337,9 @@ html {
     }
 
     .clock {
-        @include column-fixed(1 / 2);
+        @media only screen and (min-width: 414px) {
+            @include column-fixed(1 / 2);
+        }
     }
 
     .footer {
